# Verifarm-backend

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.superstack/: build-context.md
migrations/: deploy.ts
programs/verifarm/: Cargo.toml
programs/verifarm/src/: error.rs  lib.rs
programs/verifarm/src/instructions/: mod.rs
programs/verifarm/src/instructions/admin/: initialize_program.rs  manage_officer.rs  manage_oracle.rs  mod.rs  update_farmer_status.rs
programs/verifarm/src/instructions/agent/: confirm_dispute.rs  dispute_verification.rs  mod.rs  register_agent.rs  submit_verification.rs  withdraw_stake.rs
programs/verifarm/src/instructions/asset/: mod.rs  tag_livestock.rs  verify.rs
programs/verifarm/src/instructions/farmer/: mod.rs  register.rs  update_profile.rs
programs/verifarm/src/instructions/loan/: apply.rs  approve.rs  disburse.rs  initialize_vault.rs  liquidate.rs  mod.rs  repay.rs
programs/verifarm/src/instructions/risk/: mod.rs  submit_score.rs
programs/verifarm/src/state/: admin.rs  agent.rs  asset.rs  farmer.rs  loan.rs  mod.rs  risk_oracle.rs
scripts/: initialize.ts
tests/: verifarm.ts
