[package]
name = "verifarm"
version = "0.1.0"
description = "VeriFarm — Agricultural lending for East Africa smallholder farmers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verifarm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["token", "associated_token"] }
zeroize = { workspace = true }
# mpl-bubblegum and spl-account-compression added after base build succeeds
